[package]
name = "jrok-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jrok"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4", features = ["derive"] }
colored = "2"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
